# lfi-static-bind

./: .gitignore  README.md  build.sh  go.mod  main.go  meson.build  todo.txt
sandbox/: Makefile  add.c  host.c
src/: main.c  meson.build
subprojects/: argtable3.wrap  libelf.wrap
subprojects/packagefiles/argtable3/: meson.build
